Fixed issue #16861: Minor alignment issues in TCE forms
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/trunk@9945 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/sysext/t3skin/stylesheets/structure/element_tceforms.css
+++ b/typo3/sysext/t3skin/stylesheets/structure/element_tceforms.css
@@ -48,7 +48,7 @@ img.t3-TCEforms-contentchangedPaletteImg {
 }
 
 table.typo3-TCEforms {
-	width: 93%;
+	width: 100%;
 }
 
 table.typo3-TCEforms tr td.t3-form-col1,
@@ -59,6 +59,10 @@ table.typo3-TCEforms tr td.t3-form-col1 div {
 table.typo3-TCEforms tr.typo3-TCEforms-recHeaderRow td {
 	padding-top: 5px;
 	padding-bottom: 20px;
+}
+
+table.wrapperTable tr.class-main2 td.palette-header {
+	padding-left: 10px;
 }
 
 table.typo3-TCEforms .bgColor2,
@@ -163,7 +167,7 @@ table.typo3-TCEforms .formField2,
 table.typo3-TCEforms .formField3,
 table.typo3-TCEforms .formField4,
 table.typo3-TCEforms .formField5 {
-	margin: 4px 2px;
+	margin: 4px 2px 4px 1px;
 	padding: 1px;
 	vertical-align: middle;
 }
@@ -246,9 +250,9 @@ table.typo3-TCEforms span.filetypes {
 }
 
 .t3-form-palette-field-container {
-	display:inline-block;
-	margin-left:20px;
-	vertical-align:top;
+	display: inline-block;
+	margin-left: 10px;
+	vertical-align: top;
 }
 
 .t3-form-palette-field-container .t3-form-palette-field-label, .t3-form-palette-field-container .t3-form-palette-field {
